--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -13,6 +13,9 @@ nav{
     justify-content: space-between;
     margin: 50px 200px;
 }
+.bt{
+    display: flex;
+}
 .btn-primary{
     font-size: 20px;
     font-weight: 700;
@@ -22,6 +25,20 @@ nav{
     background: #FD6E0A;
     height: 64px;
     border-radius: 5px;
+    margin-top: 30px;
+}
+.btn2{
+    display: flex;
+    font-size: 20px;
+    font-weight: 700;
+    color: #FD6E0A;
+    border-color: #ec7d2d;
+    padding: 18px 35px;
+    background: #FFFFFF;
+    height: 64px;
+    border-radius: 5px;
+    margin-right: 30px;
+    margin-top: 30px;
 }
 nav li{
     list-style: none;
@@ -42,10 +59,11 @@ nav ul{
 }
 /* banner style*/
 .banner{
-    margin: 0 200px;
+    margin: 0 0 200px 185px;
     align-items: center;
     display: flex;
 }
+
 .bnr-sub{
     color: #474747;
     font-weight: 600;
@@ -63,5 +81,62 @@ nav ul{
     color: #757575;
     font-size: 18px;
     font-weight: 400;
+}
+.header{
+    background-color: #FFFFFF;
+    background-image: url('../images/header_bg.png'), url('../images/developer.png');
+    background-repeat: no-repeat;
+    background-position: bottom right, left;
+    
+}
+main{
+    max-width: 1140px;
+    margin: 0 auto;
+}
+.img{
+    position: absolute;
+    position: relative;
+}
+/* about section style*/
+.about{
+    margin-top: 130px;
+    border-radius: 10px;
+    background: #FFF8F3;
+    padding: 130px 150px;
+    text-align: center;
+
+}
+.sectiontitle{
+    
     margin-bottom: 30px;
+    font-weight: 700;
+    font-size: 35px;
+    color: #181818;
+}
+.sec-des{
+color: #757575;
+font-size: 18px;
+margin-bottom: 30px;
+}
+.about-info-container{
+    display: flex;
+    justify-content: space-around;
+ 
+}
+.about-info{
+    
+    font-weight: 400;
+
+}
+.info-title{
+    color: #757575;
+    font-size: 20px;
+
+
+}
+.info-des{
+    color: #474747;
+    font-size: 20px;
+    font-weight: 700;
+
 }
